Added morale boxes to the launch facility screenE

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-02-23	Leon Baradat <peyre@users.sourceforge.net>
+
+	* V259
+
+	* radar.c: Added morale boxes next to 'naut names in launch facility screen
+
 2011-02-23	Nicolas Laplume <nikakd@users.sourceforge.net>
 
 	* V258
