Added three icons to give players more choices

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-05-01	Leon Baradat <peyre@users.sourceforge.net>
+
+	* V261
+
+	* OS_Win32: Added three game icons
+
 2011-04-27	Leon Baradat <peyre@users.sourceforge.net>
 
 	* V260
