Added new game icons

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2011-05-14	Leon Baradat <peyre@users.sourceforge.net>
+
+	* V262
+
+	* race: Added four game icons
+
+	* OS_Win32: Added three game icons - retry
+
 2011-05-01	Leon Baradat <peyre@users.sourceforge.net>
 
 	* V261
