--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2011-05-26	Nicolas Laplume <nikakd@users.sourceforge.net>
+
+	* V263
+
+	* Change Booster Safety (added advanced option)
+
+	* Changed 'nauts morale for crewmates
+
 2011-05-14	Leon Baradat <peyre@users.sourceforge.net>
 
 	* V262
