Fixed bug that prevent compiling

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-06-22	Nicolas Laplume <nikakd@users.sourceforge.net>
+
+	* V265
+
+	* Fixed bug that prevented compiling
+
 2011-06-11	Nicolas Laplume <nikakd@users.sourceforge.net>
 
 	* V264
