add gamedata files to make install-data

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2011-06-22  Pace Willisson  pace@alum.mit.edu>
+
+	* add gamedata files to make install-data
+
 2011-06-22  Pace Willisson  <pace@alum.mit.edu>
 
 	* V266
