support for .deb

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-raceintospace (1.0alpha3-1) unstable; urgency=low
+raceintospace (1.0rc1-1) unstable; urgency=low
 
   * Initial release
 
- -- Pace Willisson <pace@alum.mit.edu>  Thu, 23 Jun 2011 09:33:30 -0400
+ -- Pace Willisson <pace@alum.mit.edu>  Fri, 24 Jun 2011 20:13:34 -0400
