--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+raceintospace (1.0rc1-3) lucid; urgency=low
+
+  * upstream cleanups
+  
+  * no chance of running on 64 bits, so set Architecture to i386 for now
+  
+ -- Pace Willisson <pace@alum.mit.edu>  Sat, 25 Jun 2011 16:17:36 -0400
+
+raceintospace (1.0rc1-2) lucid; urgency=low
+
+  * fix Build-Depends in control
+
+ -- Pace Willisson <pace@alum.mit.edu>  Fri, 24 Jun 2011 22:51:13 -0400
+
 raceintospace (1.0rc1-1) unstable; urgency=low
 
   * Initial release
