--- a/os_linux/README
+++ b/os_linux/README
@@ -6,6 +6,14 @@ $ cvs -d:ext:raceintospace.cvs.sourceforge.net:/cvsroot/raceintospace co race
 $ cvs -d:ext:raceintospace.cvs.sourceforge.net:/cvsroot/raceintospace co gamedat
 $ git clone ssh://raceintospace.git.sourceforge.net/gitroot/raceintospace/avdata
 
+For ordinary development
+
+$ cd race/race
+$ aclocal -I m4
+$ autoconf
+$ make
+# make install
+
 ================================================================
 To make a distribution tarball:
 
@@ -14,7 +22,7 @@ cd race
 (now you're in the development directory, and have race gamedat and
 avdata subdirectories)
 
-$ ./race/make-tarball RELEASE-NUBMER
+$ ./race/make-tarball RELEASE-NUMBER
 
 (for example ./race/make-tarball 1.0rc1)
 
@@ -34,9 +42,17 @@ tar xf raceintospace_REL.orig.tar.gz
 cd raceintospace-REL
 debuild
 
-create the .deb in the parent directory
+creates the .deb in the parent directory
 
 ================================================================ 
 
 there are some remnants in the Makefile for making rpm files, but they
 probably don't work any more
+
+================================================================
+
+the icon image is from
+http://mix.msfc.nasa.gov/IMAGES/MEDIUM/6870605.jpg
+"AS-205 Launch" (Apollo 7)
+
+
