--- a/os_linux/README
+++ b/os_linux/README
@@ -1,16 +1,29 @@
 To set up the developement directory structure:
 
+For project developers with Sourceforge write access:
+
 $ mkdir YOUR-DEVEL-DIRECTORY
 $ cd YOUR-DEVEL-DIRECTORY
-$ cvs -d:ext:raceintospace.cvs.sourceforge.net:/cvsroot/raceintospace co race
-$ cvs -d:ext:raceintospace.cvs.sourceforge.net:/cvsroot/raceintospace co gamedat
-$ git clone ssh://raceintospace.git.sourceforge.net/gitroot/raceintospace/avdata
+
+$ cvs -d:ext:SFNAME@raceintospace.cvs.sourceforge.net:/cvsroot/raceintospace co race
+$ cvs -d:ext:SFNAME@raceintospace.cvs.sourceforge.net:/cvsroot/raceintospace co gamedat
+$ git clone ssh://SFNAME@raceintospace.git.sourceforge.net/gitroot/raceintospace/avdata
+
+For developers without write access:
+
+$ mkdir YOUR-DEVEL-DIRECTORY
+$ cd YOUR-DEVEL-DIRECTORY
+$ cvs -d:pserver:anonymous@raceintospace.cvs.sourceforge.net:/cvsroot/raceintospace login
+$ cvs -z3 -d:pserver:anonymous@raceintospace.cvs.sourceforge.net:/cvsroot/raceintospace co race
+$ cvs -z3 -d:pserver:anonymous@raceintospace.cvs.sourceforge.net:/cvsroot/raceintospace co gamedat
+$ git clone git://raceintospace.git.sourceforge.net/gitroot/raceintospace/avdata
 
 For ordinary development
 
 $ cd YOUR-DEVEL-DIRECTORY/race
 $ aclocal -I m4
 $ autoconf
+$ configure
 $ make
 # make install
 
