--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-raceintospace (1.0) lucid; urgency=low
+raceintospace (1.0-1) lucid; urgency=low
 
   * same as 1.0rc5, just update version number
 
