--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2011-07-29  Will Glynn <will@raceintospace.org>
+
+    * V270
+
+    * checked in a bunch of changes to make the build process work in XCode 4
+
+    * rewrote C99 in-loop variable declarations ("for (int i = 0; i < n; i++)") in ANSI syntax
+
 2011-06-28  Pace Willisson  <Pace Willisson <pace@alum.mit.edu>>
 
 	* V269
