Touchup of Astronaut History screen

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2012-03-11  Leon Baradat <peyre@users.sourceforge.net>
+
+	* V273
+
+	* museum.c: Touchup of Astronaut History screen
+
 2012-03-04  Leon Baradat <peyre@users.sourceforge.net>
 
 	* V272
