Basic and Advanced Training now show 'naut morale

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2012-03-30  Leon Baradat <peyre@users.sourceforge.net>
+
+	* V274
+
+	* ast3.c: Basic and Advanced Training now show 'naut morale
+
 2012-03-11  Leon Baradat <peyre@users.sourceforge.net>
 
 	* V273
