--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,10 @@
-2012-04-10  Leon Baradat <peyre@users.sourceforge.net>
+2012-04-17  Leon Baradat <peyre@users.sourceforge.net>
+
+	* V277
+
+	* rdplex.c: Moved AVOID FAIL notification to stay out of the way of the FIX button
+
+2012-04-16  Leon Baradat <peyre@users.sourceforge.net>
 
 	* V276
 
